# Second-half-of-3rd-grade

./: .#ga_knapsack.cpp  .#nn_boston.cpp  OSkimatu.txt  Test_Image.pgm  Test_Image.ppm  a.out  ad1-1.c  ad1-2.c  ad1-3.c  ad2-1.c  ad3-1.c  ad3-1results.txt  ad4-1.c  ad4-1.txt  boston_curve.txt  boston_test.txt  boston_train.txt  boston_y.txt  client.c  ga_data.txt  ga_gene.txt  ga_knapsack.cpp  ga_knapsack_data.txt  ga_knapsack_gene.txt  ga_template_linux.cpp  gazou2.c  knapsack.txt  nn_boston.cpp  nn_template_linux_a.cpp  os2.c  server.c  suchikeisan8result.txt  tameshi  tamesi.c  training_curve.txt  training_data_2021_a.txt  y_test.txt  画像処理.txt
binary_search/: Makefile  binary_search.c  main.out
blackjack/: CMakeLists.txt
blackjack/include/: judge.h
blackjack/src/: CMakeLists.txt  judge.cpp
blackjack/tests/: CMakeLists.txt  judge_test.cpp
bmi_check/: CMakeLists.txt  main.cpp
bmi_check/include/: bmi_check.h
bmi_check/src/: CMakeLists.txt  bmi_check.cpp
bmi_check/tests/: CMakeLists.txt  bmi_check_test.cpp
mono1/: .#enshu2.c  .#enshu3.c  .#enshu3Laplacian.c  .#enshu3Sobel.c  .#enshu4average.c  .#enshu4max.c  .#enshu4median.c  .#enshu4min.c  .#enshu5kaitensaikin.c  .#enshu5kaitensenkei.c  .#enshu5kashukusaikin.c  .#enshu5kashukusenkei.c  .#enshu6.c  .#enshu7bocho.c  .#enshu7shushuku.c  .#hatten2.c  .#hatten3.c  .#sample.c  Makefile  enshu2  enshu2.c  enshu2.c~  enshu2.pgm  enshu3.c  enshu3.c~  enshu3Laplacian  enshu3Laplacian.c  enshu3Laplacian.c~  enshu3Laplacian.pgm  enshu3Roberts.pgm  enshu3Sobel.c~  enshu3Sobel.pgm  enshu4average  enshu4average.c  enshu4average.pgm  enshu4max  enshu4max.c  enshu4max.pgm  enshu4median  enshu4median.c  (+44 more)
mono1/Old_Source/: sample1pgm.c  sample1ppm.c  sample2pgm.c  sample2ppm.c
mono1/Original_Images/: sample.pgm  sample_morph.pgm  sample_noise.pgm
quicksort/: Makefile  main.out  quicksort.c
sample/: Makefile  code_0.c  error_0.c  global_0.h  jiku_0.c  kasoukikai_0.c  kigouhyou_0.c  koubun_0.c  main  main.c  main_0.c  syokika_0.c
